tests/machine/x/ocaml/sum_builtin.error
File "/tmp/TestOCamlCompiler_VMValid_Goldensum_builtin3223280698/001/sum_builtin.ml", line 24, characters 37-38:
24 |   print_endline (__show ((sum_float [1;2;3])));
                                          ^
Error: This expression has type int but an expression was expected of type
         float
  Hint: Did you mean `1.'?
